{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 1037,
  "lineage": "6c2fe59c-9e28-bec3-adf9-3be3f46cb8d2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0fb0775d11f905d14",
            "domain": "vpc",
            "id": "eipalloc-076adef925c5fec1f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0fbf18d85eaef312f",
            "private_dns": "ip-10-0-0-177.ec2.internal",
            "private_ip": "10.0.0.177",
            "public_dns": "ec2-34-236-60-89.compute-1.amazonaws.com",
            "public_ip": "34.236.60.89",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0bfe1ef82bc4c1331",
            "domain": "vpc",
            "id": "eipalloc-03f8dcfd19072bf6f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01fe74c877bfa4dbe",
            "private_dns": "ip-10-0-1-116.ec2.internal",
            "private_ip": "10.0.1.116",
            "public_dns": "ec2-54-147-79-208.compute-1.amazonaws.com",
            "public_ip": "54.147.79.208",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_sever",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:808485220920:instance/i-09e9abf3476ef6987",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e9abf3476ef6987",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws-mp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-024430d521bbe6121",
            "private_dns": "ip-10-0-0-37.ec2.internal",
            "private_ip": "10.0.0.37",
            "public_dns": "ec2-18-208-149-12.compute-1.amazonaws.com",
            "public_ip": "18.208.149.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-081804c41a759a446",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-062903269ff7a701f",
            "tags": {
              "Name": "mp_leo-bastion_server"
            },
            "tags_all": {
              "Name": "mp_leo-bastion_server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-046c786ff6cc9cf7b"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh-mp",
            "aws_subnet.public_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:internet-gateway/igw-0b35150c2168cd6b8",
            "id": "igw-0b35150c2168cd6b8",
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-0546a141541262c55"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "Loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:808485220920:loadbalancer/app/Loadbalancer-mp-leo/9693c0fbb7e922ff",
            "arn_suffix": "app/Loadbalancer-mp-leo/9693c0fbb7e922ff",
            "dns_name": "Loadbalancer-mp-leo-1986073443.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:808485220920:loadbalancer/app/Loadbalancer-mp-leo/9693c0fbb7e922ff",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Loadbalancer-mp-leo",
            "security_groups": [
              "sg-0f6f1c595f48cc2a7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0619e31785d949361"
              },
              {
                "subnet_id": "subnet-062903269ff7a701f"
              }
            ],
            "subnets": [
              "subnet-0619e31785d949361",
              "subnet-062903269ff7a701f"
            ],
            "vpc_id": "vpc-0546a141541262c55",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.apis",
            "aws_subnet.public_a",
            "aws_subnet.public_c",
            "aws_vpc.vpc",
            "aws_security_group.instances"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:808485220920:listener/app/Loadbalancer-mp-leo/9693c0fbb7e922ff/6015920f0d665150",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:808485220920:targetgroup/target-group-mp-leo/5de8468fdd75d047",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:808485220920:listener/app/Loadbalancer-mp-leo/9693c0fbb7e922ff/6015920f0d665150",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:808485220920:loadbalancer/app/Loadbalancer-mp-leo/9693c0fbb7e922ff",
            "port": 5000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.Loadbalancer",
            "aws_lb_target_group.my_alb_target_group",
            "aws_security_group.apis",
            "aws_subnet.public_a",
            "aws_subnet.public_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my_alb_listener1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:808485220920:listener/app/Loadbalancer-mp-leo/9693c0fbb7e922ff/923b54440700b5d8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:808485220920:targetgroup/target-group-mp-leo1/a0fdb4d5f6312e01",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:808485220920:listener/app/Loadbalancer-mp-leo/9693c0fbb7e922ff/923b54440700b5d8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:808485220920:loadbalancer/app/Loadbalancer-mp-leo/9693c0fbb7e922ff",
            "port": 5001,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.Loadbalancer",
            "aws_lb_target_group.my_alb_target_group1",
            "aws_security_group.apis",
            "aws_subnet.public_a",
            "aws_subnet.public_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my_alb_listener2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:808485220920:listener/app/Loadbalancer-mp-leo/9693c0fbb7e922ff/1a5b7d9e2916eb73",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:808485220920:targetgroup/target-group-mp-leo2/898141e1aa108dd0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:808485220920:listener/app/Loadbalancer-mp-leo/9693c0fbb7e922ff/1a5b7d9e2916eb73",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:808485220920:loadbalancer/app/Loadbalancer-mp-leo/9693c0fbb7e922ff",
            "port": 5002,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.Loadbalancer",
            "aws_lb_target_group.my_alb_target_group2",
            "aws_security_group.apis",
            "aws_subnet.public_a",
            "aws_subnet.public_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:808485220920:targetgroup/target-group-mp-leo/5de8468fdd75d047",
            "arn_suffix": "targetgroup/target-group-mp-leo/5de8468fdd75d047",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 300,
                "matcher": "200,201,401",
                "path": "/",
                "port": "5000",
                "protocol": "HTTP",
                "timeout": 4,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:808485220920:targetgroup/target-group-mp-leo/5de8468fdd75d047",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group-mp-leo",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0546a141541262c55"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_alb_target_group1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:808485220920:targetgroup/target-group-mp-leo1/a0fdb4d5f6312e01",
            "arn_suffix": "targetgroup/target-group-mp-leo1/a0fdb4d5f6312e01",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 300,
                "matcher": "200,201,401",
                "path": "/",
                "port": "5000",
                "protocol": "HTTP",
                "timeout": 4,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:808485220920:targetgroup/target-group-mp-leo1/a0fdb4d5f6312e01",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group-mp-leo1",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0546a141541262c55"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_alb_target_group2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:808485220920:targetgroup/target-group-mp-leo2/898141e1aa108dd0",
            "arn_suffix": "targetgroup/target-group-mp-leo2/898141e1aa108dd0",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 300,
                "matcher": "200,201,401",
                "path": "/",
                "port": "5000",
                "protocol": "HTTP",
                "timeout": 4,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:808485220920:targetgroup/target-group-mp-leo2/898141e1aa108dd0",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group-mp-leo2",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0546a141541262c55"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-076adef925c5fec1f",
            "id": "nat-004718748b57ba445",
            "network_interface_id": "eni-0fbf18d85eaef312f",
            "private_ip": "10.0.0.177",
            "public_ip": "34.236.60.89",
            "subnet_id": "subnet-062903269ff7a701f",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            }
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_subnet.public_a",
            "aws_vpc.vpc",
            "aws_eip.nat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03f8dcfd19072bf6f",
            "id": "nat-0a3360fbf9929ee50",
            "network_interface_id": "eni-01fe74c877bfa4dbe",
            "private_ip": "10.0.1.116",
            "public_ip": "54.147.79.208",
            "subnet_id": "subnet-0619e31785d949361",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            }
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.igw",
            "aws_subnet.public_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "router_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:route-table/rtb-0e97b65b652b27e22",
            "id": "rtb-0e97b65b652b27e22",
            "owner_id": "808485220920",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-004718748b57ba445",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-0546a141541262c55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_a",
            "aws_subnet.public_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "router_private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:route-table/rtb-0f9a5d7d70ea44719",
            "id": "rtb-0f9a5d7d70ea44719",
            "owner_id": "808485220920",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a3360fbf9929ee50",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-0546a141541262c55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public_c",
            "aws_vpc.vpc",
            "aws_eip.nat2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "router_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:route-table/rtb-0f289735ce680a6c7",
            "id": "rtb-0f289735ce680a6c7",
            "owner_id": "808485220920",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b35150c2168cd6b8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-0546a141541262c55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b169182af02dce5e",
            "route_table_id": "rtb-0e97b65b652b27e22",
            "subnet_id": "subnet-004ac2c0da5433301"
          },
          "dependencies": [
            "aws_subnet.private_app_a",
            "aws_subnet.public_a",
            "aws_vpc.vpc",
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_a",
            "aws_route_table.router_private_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0340eddea77d941fe",
            "route_table_id": "rtb-0f9a5d7d70ea44719",
            "subnet_id": "subnet-00e2b830315cbac44"
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_c",
            "aws_route_table.router_private_c",
            "aws_subnet.private_app_c",
            "aws_subnet.public_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e65491edef9d9b5",
            "route_table_id": "rtb-0e97b65b652b27e22",
            "subnet_id": "subnet-0eb7bfe0ebd4a2670"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw_a",
            "aws_route_table.router_private_a",
            "aws_subnet.private_db_a",
            "aws_subnet.public_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041e33895a3b85f18",
            "route_table_id": "rtb-0f9a5d7d70ea44719",
            "subnet_id": "subnet-0a9c4c1a092bddffc"
          },
          "dependencies": [
            "aws_nat_gateway.nat_gw_c",
            "aws_route_table.router_private_c",
            "aws_subnet.private_db_c",
            "aws_subnet.public_c",
            "aws_vpc.vpc",
            "aws_eip.nat2",
            "aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c8d32d0f7b75a7d",
            "route_table_id": "rtb-0f289735ce680a6c7",
            "subnet_id": "subnet-062903269ff7a701f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.router_public",
            "aws_subnet.public_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5172ad702905c54",
            "route_table_id": "rtb-0f289735ce680a6c7",
            "subnet_id": "subnet-0619e31785d949361"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.router_public",
            "aws_subnet.public_c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-ssh-mp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:security-group/sg-046c786ff6cc9cf7b",
            "description": "acesso-ssh-mp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-046c786ff6cc9cf7b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso-ssh-mp",
            "name_prefix": "",
            "owner_id": "808485220920",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0546a141541262c55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:security-group/sg-03f809774ce35354c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f809774ce35354c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "apis",
            "name_prefix": "",
            "owner_id": "808485220920",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0546a141541262c55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:security-group/sg-0f6f1c595f48cc2a7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f6f1c595f48cc2a7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "instances",
            "name_prefix": "",
            "owner_id": "808485220920",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0546a141541262c55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-004ac2c0da5433301",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-004ac2c0da5433301",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-0546a141541262c55"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-00e2b830315cbac44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-00e2b830315cbac44",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-0546a141541262c55"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-0eb7bfe0ebd4a2670",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0eb7bfe0ebd4a2670",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-0546a141541262c55"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-0a9c4c1a092bddffc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-0a9c4c1a092bddffc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-0546a141541262c55"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-062903269ff7a701f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-062903269ff7a701f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-0546a141541262c55"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:subnet/subnet-0619e31785d949361",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0619e31785d949361",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            },
            "vpc_id": "vpc-0546a141541262c55"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808485220920:vpc/vpc-0546a141541262c55",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/21",
            "default_network_acl_id": "acl-00a97890996953ab9",
            "default_route_table_id": "rtb-0f6d9bc8aa9a8c09b",
            "default_security_group_id": "sg-0f08c03d1a439db67",
            "dhcp_options_id": "dopt-02d28578",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0546a141541262c55",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f6d9bc8aa9a8c09b",
            "owner_id": "808485220920",
            "tags": {
              "Name": "mp_leo"
            },
            "tags_all": {
              "Name": "mp_leo"
            }
          }
        }
      ]
    }
  ]
}